開いてみただけ

--- a/www/components/loader.css
+++ b/www/components/loader.css
@@ -4,3 +4,9 @@
  */
 
 /*** <GENERATED> ***/
+
+/*** <Start:bootstrap4> ***/
+/*** <Start:bootstrap4 LoadCss:"components/bootstrap4/dist/css/bootstrap.min.css"> ***/
+@import url("bootstrap4/dist/css/bootstrap.min.css");
+/*** <End:bootstrap4 LoadCss:"components/bootstrap4/dist/css/bootstrap.min.css"> ***/
+/*** <End:bootstrap4> ***/
