--- a/www/css/style.css
+++ b/www/css/style.css
@@ -31,6 +31,16 @@ input {
   color: white;
   background-color: blue;
 }
+.btn2 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 16pt;
+  height: 4ex;
+  width: 7em;
+  border-radius: 10px;
+  color: yellow;
+  background-color: red;
+}
 
 #message {
   border-style: solid;
